--- a/css/style.css
+++ b/css/style.css
@@ -5,30 +5,56 @@ body {
 
 header {
   width: 100%;
-  height: 10vh;
+  height: 5vh;
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
   margin: 0;
   background-color: rgb(0, 102, 255);
 }
-
+header h1 {
+  display: block;
+  font-size: 3vh;
+  color: aliceblue;
+  margin: 0.5vh;
+  padding: 0;
+}
 #sidebar {
-  width: 20%;
-  height: 90vh;
-  top: 10vh;
+  width: 150px;
+  height: 95vh;
+  top: 5vh;
   margin: 0;
   position: fixed;
-  background-color: burlywood;
+  background-color: rgb(212, 212, 212);
 }
 
 #main {
-  width: 80%;
-  margin-left: 20vw;
-  margin-top: 10vh;
+  width: 85%;
+  margin-left: 150px;
+  margin-top: 5vh;
 }
 
 .newscon {
-  width: 100%;
-  margin: 20px 0;
+  width: 90%;
+  margin: 10px 2% 10px 8%;
+  padding-top: 10px;
+  border-bottom: rgba(0, 0, 0, 0.678) 2px solid;
+}
+.side-focus {
+  text-align: center;
+  height: 40px;
+  width: 90%;
+  margin-top: 5px;
+}
+.sidebut {
+  display: block;
+  text-align: center;
+  height: 40px;
+  width: 90%;
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.13);
+}
+.sidebut:hover {
+  background-color: rgb(255, 255, 255);
 }
